Moving application to MVC pattern

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
     <script src="./src/js/shopping-cart-start/Product.js"></script>
     <script src="./src/js/shopping-cart-start/Cart.js"></script>
     <script src="./src/js/shopping-cart-start/View.js"></script>
+    <script src="./src/js/shopping-cart-start/app.js"></script>
 </body>
 
 </html>
