Moving application to MVC pattern

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
             </div>
         </section>
     </main>
+    <script src="./src/js/lib/ajax.js"></script>
     <script src="./src/js/shopping-cart-start/Product.js"></script>
     <script src="./src/js/shopping-cart-start/Cart.js"></script>
     <script src="./src/js/shopping-cart-start/View.js"></script>
