Created jq library

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
                     <header>
                         <h4>List of products</h4>
                     </header>
+                  <p>Double click 👆 to add to your shopping cart</p>
                     <ul id="products" class="list-group"></ul>
                 </div>
             </div>
@@ -55,7 +56,7 @@
             </div>
         </section>
     </main>
-    <script src="./src/js/lib/ajax.js"></script>
+    <script src="src/js/lib/jq.js"></script>
     <script src="./src/js/shopping-cart-start/Product.js"></script>
     <script src="./src/js/shopping-cart-start/Cart.js"></script>
     <script src="./src/js/shopping-cart-start/View.js"></script>
