Created ajax compatible version

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                     <header>
                         <h4>List of products</h4>
                     </header>
-                  <p>Double click 👆 to add to your shopping cart</p>
+                  <p>Click 👆 to add the product to your shopping cart</p>
                     <ul id="products" class="list-group"></ul>
                 </div>
             </div>
